--- a/bio.html
+++ b/bio.html
@@ -65,7 +65,18 @@ footer {
   font-size: 0.9rem;
   opacity: 0.7;
 }
-</style> </head> <body> <h1>About Glenn 🧬</h1> <p>Hi, I’m Glenn — karate black belt, piano player, and occasional website wizard.</p> <p>Here’s some quick lore about me:</p> <ul> <li>🥋 Karate kicks: 100% effective, 0% violence.</li> <li>🎹 Piano skills: somewhere between Beethoven and a cat walking on keys.</li> <li>💻 Tech hobbyist: I break code so you don’t have to.</li> <li>🍕 Pizza fan: scientifically proven best food.</li> </ul>
+</style> 
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4H4VVH59NM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4H4VVH59NM');
+</script>
+
+</head> <body> <h1>About Glenn 🧬</h1> <p>Hi, I’m Glenn — karate black belt, piano player, and occasional website wizard.</p> <p>Here’s some quick lore about me:</p> <ul> <li>🥋 Karate kicks: 100% effective, 0% violence.</li> <li>🎹 Piano skills: somewhere between Beethoven and a cat walking on keys.</li> <li>💻 Tech hobbyist: I break code so you don’t have to.</li> <li>🍕 Pizza fan: scientifically proven best food.</li> </ul>
 <button onclick="reveal()">Reveal Secret Fact 🤫</button>
 <p class="hidden" id="secret">One time I coded for 3 hours straight... then realized I was in the wrong file.</p>
 <button onclick="window.location.href='index.html'">Back to Home 🏠</button>
